Fix z-index issue for mega menu in Safari (#2034)
* Fix z-index issue for mega menu in Safari

* add comment with context

* small edits

* change approach

--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -14,7 +14,6 @@
   position: absolute;
   right: 0;
   top: 100%;
-  z-index: -1;
 }
 
 .shopify-section-header-sticky .mega-menu__content {
@@ -33,6 +32,7 @@
 .mega-menu[open] .mega-menu__content {
   opacity: 1;
   transform: translateY(0);
+
 }
 
 .mega-menu__list {
